2008-12-16  Stephanie Lewis  <slewis@apple.com>

        Reviewed by Geoff Garen.

        Change HTTPHeaderMap to use an AtomicString as its key.  
        Shaves ~1MB off of the Mozilla Memory Test
        No functionality difference    

        * WebCore.xcodeproj/project.pbxproj:
        * inspector/InspectorController.cpp:
        (WebCore::addHeaders):
        * loader/appcache/ApplicationCacheStorage.cpp:
        (WebCore::parseHeader):
        * platform/network/HTTPHeaderMap.h:
        * platform/network/ResourceRequestBase.cpp:
        (WebCore::ResourceRequestBase::httpHeaderField):
        (WebCore::ResourceRequestBase::setHTTPHeaderField):
        (WebCore::ResourceRequestBase::addHTTPHeaderField):
        * platform/network/ResourceRequestBase.h:
        * platform/network/ResourceResponseBase.cpp:
        (WebCore::ResourceResponseBase::httpHeaderField):
        (WebCore::ResourceResponseBase::setHTTPHeaderField):
        * platform/network/ResourceResponseBase.h:
        * platform/text/StringHash.h:
        (WebCore::CaseFoldingHash::hash):
        (WebCore::CaseFoldingHash::equal):
        * xml/XMLHttpRequest.cpp:
        (WebCore::isSetCookieHeader):
        (WebCore::XMLHttpRequest::setRequestHeader):
        (WebCore::XMLHttpRequest::setRequestHeaderInternal):
        (WebCore::XMLHttpRequest::getRequestHeader):
        (WebCore::XMLHttpRequest::getResponseHeader):
        * xml/XMLHttpRequest.h:

2008-12-16  Nikolas Zimmermann  <nikolas.zimmermann@torchmobile.com>

        Reviewed by Darin Adler.

        Fixes: https://bugs.webkit.org/show_bug.cgi?id=22876

        Remove legacy randomNumber() functionality from HTMLFormElement, and use the new wtf/RandomNumber.h.
        Also remove an uneeded QFileInfo include while I'm at it - there is no Qt usage in this file.

        * ForwardingHeaders/wtf/RandomNumber.h: Added.
        * html/HTMLFormElement.cpp:
        (WebCore::getUniqueBoundaryString):
